# ethereum-event-tracker

./: .env.example  .gitignore  LICENSE  config.py  env.example  event_tracker.py  event_tracker_v1.py  log_decoder.py  logger.py  parallel_event_tracker.py  parse_solidity_event.py  process_event_tracker.py  pyproject.toml  readme.md  requirements.txt
contracts/: .stETH-abi.json.swp  stETH-abi.json
event/: TetherToken-Transfer.sol  stETH-SharesBurnt.sol  stETH-TokenRebased.sol  stETH-TransferShares.sol
sample/: log_decoder.py  log_filters.py  logger.py  parallel_event_tracker.py  parse_solidity_event.py  process_event_tracker.py
tests/: env.example  not_a_test.py  parallel_event_tracker.py  process_event_tracker.py  stETH-TransferShares-20000000-20000100.parquet  test_empty.py  test_parallel_event_tracker.py  test_process_event_tracker.py  test_process_event_tracker_script.py  test_web3_connection.py
unittest/: test_event_tracker.py  test_parallel_event_tracker.py
